--- a/estilo.css
+++ b/estilo.css
@@ -1,1 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+
+:root {
+  --color-primary: #4d41c0;
+  --bg-gray: #e8e8e8;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
+
+html,
+body {
+  background-color: var(--bg-gray);
+}
+
+a,
+a:hover {
+  text-decoration: none;
+  color: unset;
+}
