--- a/estilo.css
+++ b/estilo.css
@@ -1,22 +1,60 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 
 :root {
-  --color-primary: #4d41c0;
-  --bg-gray: #e8e8e8;
+    --color-primary: #4d41c0;
+    --bg-gray: #e8e8e8;
+    --white: #fff;
 }
 
 * {
-  box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    margin: 0;
 }
 
 html,
 body {
-  background-color: var(--bg-gray);
+    background-color: var(--bg-gray);
 }
 
+header {
+    background-color: var(--color-primary);
+    color: var(--white);
+    height: 60px;
+    display: flex;
+    align-items: center;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav h1 {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+nav a {
+    font-size: 12px;
+    font-weight: 400;
+}
 a,
 a:hover {
-  text-decoration: none;
-  color: unset;
+    text-decoration: none;
+    color: unset;
+}
+
+.dsmovie-contact-container {
+    display: flex;
+    align-items: center;
+}
+
+.dsmovie-contact-container img {
+    margin-right: 10px;
 }
