--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,7 @@
 
 :root {
     --color-primary: #4d41c0;
+    --text-gray: #4a4a4a;
     --bg-gray: #e8e8e8;
     --white: #fff;
 }
@@ -12,7 +13,12 @@
     font-family: "Open Sans", sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
@@ -57,4 +63,43 @@ a:hover {
 
 .dsmovie-contact-container img {
     margin-right: 10px;
+}
+
+#dsmovie-card-list {
+    padding: 40px 0;
+}
+
+.dsmovie-card {
+    width: 360px;
+    background-color: var(--white);
+}
+
+.dsmovie-card img {
+    width: 100%;
+}
+
+.dsmovie-card-description {
+    padding: 10px 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description h3 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.dsmovie-btn, .dsmovie-btn:hover {
+    width: 180px;
+    height: 40px;
+    background-color: var(--color-primary);
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
 }
