--- a/estilo.css
+++ b/estilo.css
@@ -70,25 +70,30 @@ a:hover {
 }
 
 .dsmovie-card {
-    width: 360px;
-    background-color: var(--white);
+    width: 100%;
 }
 
 .dsmovie-card img {
     width: 100%;
+    border-radius: 8px 8px 0 0;
 }
 
 .dsmovie-card-description {
-    padding: 10px 0 20px 0;
+    background-color: var(--white);
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    border-radius: 0 0 8px 8px;
+    min-height: 150px;
 }
 
 .dsmovie-card-description h3 {
     font-size: 14px;
     font-weight: 700;
     margin-bottom: 25px;
+    text-align: center;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
